--- a/auction.html
+++ b/auction.html
@@ -472,13 +472,13 @@
 
                 <div class="col-lg-4 col-6 mb-3 column">
                   <div class="product-box">
-                    <div class="image-content">
+                    <a href="single-product.html" class="image-content">
                       <img src="assets/images/products/auction.webp" loading="lazy" alt="" />
   
                       <div class="type">
                         جديد
                       </div>
-                    </div>
+                    </a>
   
                     <div class="contain">
                       <a href="single-product.html" class="product-title">
@@ -506,13 +506,13 @@
 
                 <div class="col-lg-4 col-6 mb-3 column">
                   <div class="product-box">
-                    <div class="image-content">
+                    <a href="single-product.html" class="image-content">
                       <img src="assets/images/products/auction.webp" loading="lazy" alt="" />
   
                       <div class="type">
                         جديد
                       </div>
-                    </div>
+                    </a>
   
                     <div class="contain">
                       <a href="single-product.html" class="product-title">
@@ -540,13 +540,13 @@
 
                 <div class="col-lg-4 col-6 mb-3 column">
                   <div class="product-box">
-                    <div class="image-content">
+                    <a href="single-product.html" class="image-content">
                       <img src="assets/images/products/auction.webp" loading="lazy" alt="" />
   
                       <div class="type">
                         جديد
                       </div>
-                    </div>
+                    </a>
   
                     <div class="contain">
                       <a href="single-product.html" class="product-title">
@@ -574,13 +574,13 @@
 
                 <div class="col-lg-4 col-6 mb-3 column">
                   <div class="product-box">
-                    <div class="image-content">
+                    <a href="single-product.html" class="image-content">
                       <img src="assets/images/products/auction.webp" loading="lazy" alt="" />
   
                       <div class="type">
                         جديد
                       </div>
-                    </div>
+                    </a>
   
                     <div class="contain">
                       <a href="single-product.html" class="product-title">
@@ -608,13 +608,13 @@
 
                 <div class="col-lg-4 col-6 mb-3 column">
                   <div class="product-box">
-                    <div class="image-content">
+                    <a href="single-product.html" class="image-content">
                       <img src="assets/images/products/auction.webp" loading="lazy" alt="" />
   
                       <div class="type">
                         جديد
                       </div>
-                    </div>
+                    </a>
   
                     <div class="contain">
                       <a href="single-product.html" class="product-title">
@@ -642,13 +642,13 @@
 
                 <div class="col-lg-4 col-6 mb-3 column">
                   <div class="product-box">
-                    <div class="image-content">
+                    <a href="single-product.html" class="image-content">
                       <img src="assets/images/products/auction.webp" loading="lazy" alt="" />
   
                       <div class="type">
                         جديد
                       </div>
-                    </div>
+                    </a>
   
                     <div class="contain">
                       <a href="single-product.html" class="product-title">
@@ -676,13 +676,13 @@
 
                 <div class="col-lg-4 col-6 mb-3 column">
                   <div class="product-box">
-                    <div class="image-content">
+                    <a href="single-product.html" class="image-content">
                       <img src="assets/images/products/auction.webp" loading="lazy" alt="" />
   
                       <div class="type">
                         جديد
                       </div>
-                    </div>
+                    </a>
   
                     <div class="contain">
                       <a href="single-product.html" class="product-title">
@@ -710,13 +710,13 @@
 
                 <div class="col-lg-4 col-6 mb-3 column">
                   <div class="product-box">
-                    <div class="image-content">
+                    <a href="single-product.html" class="image-content">
                       <img src="assets/images/products/auction.webp" loading="lazy" alt="" />
   
                       <div class="type">
                         جديد
                       </div>
-                    </div>
+                    </a>
   
                     <div class="contain">
                       <a href="single-product.html" class="product-title">
