--- a/single-product-with-payment.html
+++ b/single-product-with-payment.html
@@ -508,13 +508,13 @@
             <div class="swiper-wrapper">
               <div class="swiper-slide">
                 <div class="product-box">
-                  <div class="image-content">
+                  <a href="single-product.html" class="image-content">
                     <img src="assets/images/products/product_1.webp" loading="lazy" alt="" />
 
                     <div class="type">
                       جديد
                     </div>
-                  </div>
+                  </a>
 
                   <div class="contain">
                     <a href="single-product.html" class="product-title">
@@ -584,13 +584,13 @@
 
               <div class="swiper-slide">
                 <div class="product-box">
-                  <div class="image-content">
+                  <a href="single-product.html" class="image-content">
                     <img src="assets/images/products/product_3.webp" loading="lazy" alt="" />
 
                     <div class="type">
                       جديد
                     </div>
-                  </div>
+                  </a>
 
                   <div class="contain">
                     <a href="single-product.html" class="product-title">
@@ -622,13 +622,13 @@
 
               <div class="swiper-slide">
                 <div class="product-box">
-                  <div class="image-content">
+                  <a href="single-product.html" class="image-content">
                     <img src="assets/images/products/product_1.webp" loading="lazy" alt="" />
 
                     <div class="type">
                       جديد
                     </div>
-                  </div>
+                  </a>
 
                   <div class="contain">
                     <a href="single-product.html" class="product-title">
@@ -698,13 +698,13 @@
 
               <div class="swiper-slide">
                 <div class="product-box">
-                  <div class="image-content">
+                  <a href="single-product.html" class="image-content">
                     <img src="assets/images/products/product_3.webp" loading="lazy" alt="" />
 
                     <div class="type">
                       جديد
                     </div>
-                  </div>
+                  </a>
 
                   <div class="contain">
                     <a href="single-product.html" class="product-title">
