--- a/single-product-with-payment_and_nogation_offers.html
+++ b/single-product-with-payment_and_nogation_offers.html
@@ -648,13 +648,13 @@
             <div class="swiper-wrapper">
               <div class="swiper-slide">
                 <div class="product-box">
-                  <div class="image-content">
+                  <a href="single-product.html" class="image-content">
                     <img src="assets/images/products/product_1.webp" loading="lazy" alt="" />
 
                     <div class="type">
                       جديد
                     </div>
-                  </div>
+                  </a>
 
                   <div class="contain">
                     <a href="single-product.html" class="product-title">
@@ -724,13 +724,13 @@
 
               <div class="swiper-slide">
                 <div class="product-box">
-                  <div class="image-content">
+                  <a href="single-product.html" class="image-content">
                     <img src="assets/images/products/product_3.webp" loading="lazy" alt="" />
 
                     <div class="type">
                       جديد
                     </div>
-                  </div>
+                  </a>
 
                   <div class="contain">
                     <a href="single-product.html" class="product-title">
@@ -762,13 +762,13 @@
 
               <div class="swiper-slide">
                 <div class="product-box">
-                  <div class="image-content">
+                  <a href="single-product.html" class="image-content">
                     <img src="assets/images/products/product_1.webp" loading="lazy" alt="" />
 
                     <div class="type">
                       جديد
                     </div>
-                  </div>
+                  </a>
 
                   <div class="contain">
                     <a href="single-product.html" class="product-title">
@@ -838,13 +838,13 @@
 
               <div class="swiper-slide">
                 <div class="product-box">
-                  <div class="image-content">
+                  <a href="single-product.html" class="image-content">
                     <img src="assets/images/products/product_3.webp" loading="lazy" alt="" />
 
                     <div class="type">
                       جديد
                     </div>
-                  </div>
+                  </a>
 
                   <div class="contain">
                     <a href="single-product.html" class="product-title">
