--- a/single-product-end.html
+++ b/single-product-end.html
@@ -512,13 +512,13 @@
             <div class="swiper-wrapper">
               <div class="swiper-slide">
                 <div class="product-box">
-                  <div class="image-content">
+                  <a href="single-product.html" class="image-content">
                     <img src="assets/images/products/product_1.webp" loading="lazy" alt="" />
 
                     <div class="type">
                       جديد
                     </div>
-                  </div>
+                  </a>
 
                   <div class="contain">
                     <a href="single-product.html" class="product-title">
@@ -588,13 +588,13 @@
 
               <div class="swiper-slide">
                 <div class="product-box">
-                  <div class="image-content">
+                  <a href="single-product.html" class="image-content">
                     <img src="assets/images/products/product_3.webp" loading="lazy" alt="" />
 
                     <div class="type">
                       جديد
                     </div>
-                  </div>
+                  </a>
 
                   <div class="contain">
                     <a href="single-product.html" class="product-title">
@@ -626,13 +626,13 @@
 
               <div class="swiper-slide">
                 <div class="product-box">
-                  <div class="image-content">
+                  <a href="single-product.html" class="image-content">
                     <img src="assets/images/products/product_1.webp" loading="lazy" alt="" />
 
                     <div class="type">
                       جديد
                     </div>
-                  </div>
+                  </a>
 
                   <div class="contain">
                     <a href="single-product.html" class="product-title">
@@ -702,13 +702,13 @@
 
               <div class="swiper-slide">
                 <div class="product-box">
-                  <div class="image-content">
+                  <a href="single-product.html" class="image-content">
                     <img src="assets/images/products/product_3.webp" loading="lazy" alt="" />
 
                     <div class="type">
                       جديد
                     </div>
-                  </div>
+                  </a>
 
                   <div class="contain">
                     <a href="single-product.html" class="product-title">
