--- a/watch.html
+++ b/watch.html
@@ -585,13 +585,13 @@
 
                 <div class="col-lg-4 col-6 mb-3 column">
                   <div class="product-box">
-                    <div class="image-content">
+                    <a href="single-product.html" class="image-content">
                       <img src="assets/images/products/product_1.webp" loading="lazy" alt="" />
   
                       <div class="type">
                         جديد
                       </div>
-                    </div>
+                    </a>
   
                     <div class="contain">
                       <a href="single-product.html" class="product-title">
@@ -663,13 +663,13 @@
 
                 <div class="col-lg-4 col-6 mb-3 column">
                   <div class="product-box">
-                    <div class="image-content">
+                    <a href="single-product.html" class="image-content">
                       <img src="assets/images/products/watch.webp" loading="lazy" alt="" />
   
                       <div class="type">
                         جديد
                       </div>
-                    </div>
+                    </a>
   
                     <div class="contain">
                       <a href="single-product.html" class="product-title">
@@ -701,13 +701,13 @@
 
                 <div class="col-lg-4 col-6 mb-3 column">
                   <div class="product-box">
-                    <div class="image-content">
+                    <a href="single-product.html" class="image-content">
                       <img src="assets/images/products/watch.webp" loading="lazy" alt="" />
   
                       <div class="type">
                         جديد
                       </div>
-                    </div>
+                    </a>
   
                     <div class="contain">
                       <a href="single-product.html" class="product-title">
@@ -739,13 +739,13 @@
 
                 <div class="col-lg-4 col-6 mb-3 column">
                   <div class="product-box">
-                    <div class="image-content">
+                    <a href="single-product.html" class="image-content">
                       <img src="assets/images/products/watch.webp" loading="lazy" alt="" />
   
                       <div class="type">
                         جديد
                       </div>
-                    </div>
+                    </a>
   
                     <div class="contain">
                       <a href="single-product.html" class="product-title">
@@ -777,13 +777,13 @@
 
                 <div class="col-lg-4 col-6 mb-3 column">
                   <div class="product-box">
-                    <div class="image-content">
+                    <a href="single-product.html" class="image-content">
                       <img src="assets/images/products/watch.webp" loading="lazy" alt="" />
   
                       <div class="type">
                         جديد
                       </div>
-                    </div>
+                    </a>
   
                     <div class="contain">
                       <a href="single-product.html" class="product-title">
@@ -815,13 +815,13 @@
 
                 <div class="col-lg-4 col-6 mb-3 column">
                   <div class="product-box">
-                    <div class="image-content">
+                    <a href="single-product.html" class="image-content">
                       <img src="assets/images/products/watch.webp" loading="lazy" alt="" />
   
                       <div class="type">
                         جديد
                       </div>
-                    </div>
+                    </a>
   
                     <div class="contain">
                       <a href="single-product.html" class="product-title">
@@ -853,13 +853,13 @@
 
                 <div class="col-lg-4 col-6 mb-3 column">
                   <div class="product-box">
-                    <div class="image-content">
+                    <a href="single-product.html" class="image-content">
                       <img src="assets/images/products/watch.webp" loading="lazy" alt="" />
   
                       <div class="type">
                         جديد
                       </div>
-                    </div>
+                    </a>
   
                     <div class="contain">
                       <a href="single-product.html" class="product-title">
@@ -891,13 +891,13 @@
 
                 <div class="col-lg-4 col-6 mb-3 column">
                   <div class="product-box">
-                    <div class="image-content">
+                    <a href="single-product.html" class="image-content">
                       <img src="assets/images/products/watch.webp" loading="lazy" alt="" />
   
                       <div class="type">
                         جديد
                       </div>
-                    </div>
+                    </a>
   
                     <div class="contain">
                       <a href="single-product.html" class="product-title">
@@ -929,13 +929,13 @@
 
                 <div class="col-lg-4 col-6 mb-3 column">
                   <div class="product-box">
-                    <div class="image-content">
+                    <a href="single-product.html" class="image-content">
                       <img src="assets/images/products/watch.webp" loading="lazy" alt="" />
   
                       <div class="type">
                         جديد
                       </div>
-                    </div>
+                    </a>
   
                     <div class="contain">
                       <a href="single-product.html" class="product-title">
