edit product box in index page

--- a/index.html
+++ b/index.html
@@ -347,18 +347,18 @@
             <div class="swiper-wrapper">
               <div class="swiper-slide">
                 <div class="product-box">
-                  <div class="image-content">
-                    <img src="assets/images/products/product_1.webp" loading="lazy" alt="" />
-
-                    <div class="type">
-                      جديد
-                    </div>
-                  </div>
+                  <a href="single-product.html" class="image-content">
+                      <img src="assets/images/products/product_1.webp" loading="lazy" alt="" />
+  
+                      <div class="type">
+                        جديد
+                      </div>
+                    </a>
 
                   <div class="contain">
-                    <h2>
+                    <a href="single-product.html" class="product-title">
                       سقنتشر
-                    </h2>
+                    </a>
 
                     <p class="desc">
                       Van Cleef
@@ -385,18 +385,18 @@
 
               <div class="swiper-slide">
                 <div class="product-box">
-                  <div class="image-content">
-                    <img src="assets/images/products/product_2.webp" loading="lazy" alt="" />
-
-                    <div class="type">
-                      جديد
-                    </div>
-                  </div>
+                  <a href="single-product.html" class="image-content">
+                      <img src="assets/images/products/product_2.webp" loading="lazy" alt="" />
+  
+                      <div class="type">
+                        جديد
+                      </div>
+                    </a>
 
                   <div class="contain">
-                    <h2>
-                      سقنتشر
-                    </h2>
+                    <a href="single-product.html" class="product-title">
+                        سقنتشر
+                      </a>
 
                     <p class="desc">
                       Van Cleef
@@ -423,18 +423,18 @@
 
               <div class="swiper-slide">
                 <div class="product-box">
-                  <div class="image-content">
-                    <img src="assets/images/products/product_3.webp" loading="lazy" alt="" />
-
-                    <div class="type">
-                      جديد
-                    </div>
-                  </div>
+                  <a href="single-product.html" class="image-content">
+                      <img src="assets/images/products/product_3.webp" loading="lazy" alt="" />
+  
+                      <div class="type">
+                        جديد
+                      </div>
+                    </a>
 
                   <div class="contain">
-                    <h2>
-                      سقنتشر
-                    </h2>
+                    <a href="single-product.html" class="product-title">
+                        سقنتشر
+                      </a>
 
                     <p class="desc">
                       Van Cleef
@@ -461,18 +461,18 @@
 
               <div class="swiper-slide">
                 <div class="product-box">
-                  <div class="image-content">
-                    <img src="assets/images/products/product_1.webp" loading="lazy" alt="" />
-
-                    <div class="type">
-                      جديد
-                    </div>
-                  </div>
+                  <a href="single-product.html" class="image-content">
+                      <img src="assets/images/products/product_1.webp" loading="lazy" alt="" />
+  
+                      <div class="type">
+                        جديد
+                      </div>
+                    </a>
 
                   <div class="contain">
-                    <h2>
-                      سقنتشر
-                    </h2>
+                    <a href="single-product.html" class="product-title">
+                        سقنتشر
+                      </a>
 
                     <p class="desc">
                       Van Cleef
@@ -499,18 +499,18 @@
 
               <div class="swiper-slide">
                 <div class="product-box">
-                  <div class="image-content">
-                    <img src="assets/images/products/product_2.webp" loading="lazy" alt="" />
-
-                    <div class="type">
-                      جديد
-                    </div>
-                  </div>
+                  <a href="single-product.html" class="image-content">
+                      <img src="assets/images/products/product_2.webp" loading="lazy" alt="" />
+  
+                      <div class="type">
+                        جديد
+                      </div>
+                    </a>
 
                   <div class="contain">
-                    <h2>
-                      سقنتشر
-                    </h2>
+                    <a href="single-product.html" class="product-title">
+                        سقنتشر
+                      </a>
 
                     <p class="desc">
                       Van Cleef
@@ -537,18 +537,18 @@
 
               <div class="swiper-slide">
                 <div class="product-box">
-                  <div class="image-content">
-                    <img src="assets/images/products/product_3.webp" loading="lazy" alt="" />
-
-                    <div class="type">
-                      جديد
-                    </div>
-                  </div>
+                  <a href="single-product.html" class="image-content">
+                      <img src="assets/images/products/product_3.webp" loading="lazy" alt="" />
+  
+                      <div class="type">
+                        جديد
+                      </div>
+                    </a>
 
                   <div class="contain">
-                    <h2>
-                      سقنتشر
-                    </h2>
+                    <a href="single-product.html" class="product-title">
+                        سقنتشر
+                      </a>
 
                     <p class="desc">
                       Van Cleef
