--- a/order-reservation.html
+++ b/order-reservation.html
@@ -235,11 +235,104 @@
                     </div>
                   </div>
 
-                  <div class="col-12 mb-4">
-                    <div class="from-group text-area">
-                      <img src="assets/images/form/location.svg" loading="lazy" alt="" />
+                  <div class="col-12">
+                    <div class="heading" style="margin-bottom: 20px;">
+                      <h1 class="mb-0">
+                        اختار 
+                        <span>
+                          عنوانك
+                        </span>
+                      </h1>
+                    </div>
+                  </div>
 
-                      <textarea name="" class="form-control" placeholder="العنوان" id="" cols="30" rows="10"></textarea>
+                  <div class="col-lg-4 col-12 mb-3">
+                    <div class="location-box form-check">
+                      <input class="form-check-input" type="radio" name="locations" id="location3">
+                      <label class="form-check-label" for="location3">
+                        <h1>
+                          السعودية - الرياض
+                        </h1>
+  
+                        <p>
+                          هناك حقيقة مثبتة منذ زمن طويل 
+                        </p>
+  
+                        <p>
+                          <span>
+                            الرمز البريدي
+                          </span>
+  
+                          12545
+                        </p>
+                      </label>
+                    </div>
+                  </div>
+
+                  <div class="col-lg-4 col-12 mb-3">
+                    <div class="location-box form-check">
+                      <input class="form-check-input" type="radio" name="locations" id="location2">
+                      <label class="form-check-label" for="location2">
+                        <h1>
+                          السعودية - الرياض
+                        </h1>
+  
+                        <p>
+                          هناك حقيقة مثبتة منذ زمن طويل 
+                        </p>
+  
+                        <p>
+                          <span>
+                            الرمز البريدي
+                          </span>
+  
+                          12545
+                        </p>
+                      </label>
+                    </div>
+                  </div>
+
+                  <div class="col-lg-4 col-12 mb-3">
+                    <div class="location-box form-check">
+                      <input class="form-check-input" type="radio" name="locations" id="location1">
+                      <label class="form-check-label" for="location1">
+                        <h1>
+                          السعودية - الرياض
+                        </h1>
+  
+                        <p>
+                          هناك حقيقة مثبتة منذ زمن طويل 
+                        </p>
+  
+                        <p>
+                          <span>
+                            الرمز البريدي
+                          </span>
+  
+                          12545
+                        </p>
+                      </label>
+                    </div>
+                  </div>
+
+                  <div class="col-12 mb-3">
+                    <div class="button-contain">
+                      <a href="#" class="custom-btn large-btn" type="button" data-toggle="modal" data-target="#locationModel">
+                        <span>
+                          اضافة عنوان جديد
+                        </span>
+                      </a>
+                    </div>
+                  </div>
+
+                  <div class="col-12">
+                    <div class="heading" style="margin-bottom: 20px;">
+                      <h1 class="mb-0">
+                        اختار 
+                        <span>
+                          طريقه الدفع
+                        </span>
+                      </h1>
                     </div>
                   </div>
 
@@ -512,6 +605,210 @@
         </div>
       </div>
     </footer>
+
+    <div class="modal fade" id="deleteMethod" tabindex="-1" aria-labelledby="deleteMethod" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-body">
+            <div class="contain">
+              <h1>
+               هل انت متاكد من حذف العنوان
+              </h1>
+
+              <div class="button-contain form-contain justify-content-center">
+                <button class="custom-btn" data-dismiss="modal">
+                  <span>
+                    نعم   
+                  </span>
+                </button>
+
+                <button class="custom-btn mx-1" data-dismiss="modal">
+                  <span>
+                    لا   
+                  </span>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="modal fade" id="locationModel" tabindex="-1" aria-labelledby="locationModel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-body">
+            <div class="contain">
+              <h1>
+                اضف عنوان  جديد
+              </h1>
+
+              <form action="" class="form-contain">
+                <div class="row">
+                  <div class="col-12">
+                    <div class="from-group select-option">
+                      <img src="assets/images/form/location.svg" loading="lazy" alt="" />
+
+                      <select class="form-control">
+                        <option value="">
+                          الدولة
+                        </option>
+
+                        <option value="">
+                          السعودية 
+                        </option>
+
+                        <option value="">
+                          مصر 
+                        </option>
+                      </select>
+                    </div>
+                  </div>
+
+                  <div class="col-12">
+                    <div class="from-group select-option">
+                      <img src="assets/images/form/location.svg" loading="lazy" alt="" />
+
+                      <select class="form-control">
+                        <option value="">
+                          المدينة
+                        </option>
+
+                        <option value="">
+                          المدينة 
+                        </option>
+
+                        <option value="">
+                          المدينة 
+                        </option>
+                      </select>
+                    </div>
+                  </div>
+
+                  <div class="col-12">
+                    <div class="from-group">
+                      <img src="assets/images/form/frame.svg" loading="lazy" alt="" />
+
+                      <input type="text" class="form-control" placeholder="الرمز البريدي" />
+                    </div>
+                  </div>
+
+                  <div class="col-12 mb-4">
+                    <div class="from-group text-area">
+                      <img src="assets/images/form/location.svg" loading="lazy" alt="" />
+
+                      <textarea name="" class="form-control" placeholder="العنوان" id="" cols="30" rows="10"></textarea>
+                    </div>
+                  </div>
+                </div>
+              </form>
+
+              <div class="button-contain form-contain justify-content-center">
+                <a href="#" class="custom-btn">
+                  <span>
+                    اضافة 
+                  </span>
+                </a>
+
+                <a href="#" class="custom-btn mx-1" data-dismiss="modal">
+                  <span>
+                    اللغاء  
+                  </span>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="modal fade" id="editLocationModel" tabindex="-1" aria-labelledby="editLocationModel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-body">
+            <div class="contain">
+              <h1>
+                تعديل عنوان 
+              </h1>
+
+              <form action="" class="form-contain">
+                <div class="row">
+                  <div class="col-12">
+                    <div class="from-group select-option">
+                      <img src="assets/images/form/location.svg" loading="lazy" alt="" />
+
+                      <select class="form-control">
+                        <option value="">
+                          الدولة
+                        </option>
+
+                        <option value="">
+                          السعودية 
+                        </option>
+
+                        <option value="">
+                          مصر 
+                        </option>
+                      </select>
+                    </div>
+                  </div>
+
+                  <div class="col-12">
+                    <div class="from-group select-option">
+                      <img src="assets/images/form/location.svg" loading="lazy" alt="" />
+
+                      <select class="form-control">
+                        <option value="">
+                          المدينة
+                        </option>
+
+                        <option value="">
+                          المدينة 
+                        </option>
+
+                        <option value="">
+                          المدينة 
+                        </option>
+                      </select>
+                    </div>
+                  </div>
+
+                  <div class="col-12">
+                    <div class="from-group">
+                      <img src="assets/images/form/frame.svg" loading="lazy" alt="" />
+
+                      <input type="text" class="form-control" placeholder="الرمز البريدي" />
+                    </div>
+                  </div>
+
+                  <div class="col-12 mb-4">
+                    <div class="from-group text-area">
+                      <img src="assets/images/form/location.svg" loading="lazy" alt="" />
+
+                      <textarea name="" class="form-control" placeholder="العنوان" id="" cols="30" rows="10"></textarea>
+                    </div>
+                  </div>
+                </div>
+              </form>
+
+              <div class="button-contain form-contain justify-content-center">
+                <a href="#" class="custom-btn">
+                  <span>
+                    اضافة 
+                  </span>
+                </a>
+
+                <a href="#" class="custom-btn mx-1" data-dismiss="modal">
+                  <span>
+                    اللغاء  
+                  </span>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <a href="#" class="fixed-icon">
       <img src="assets/images/icons/whatsapp.svg" loading="lazy" alt="" />
